--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,8 @@
 @import "{{ site.theme }}";
-
---font-family-base: "DM Sans", sans-serif;
---font-family-heading: "DM Sans", sans-serif;
---font-family-monospace: "Fira Mono", monospace;
---font-family-logo: "DM Sans", sans-serif;
+// .markdown-body {
+//   font-family: 'Times New Roman', Times, serif;
+// }
+font-family-base: "DM Sans", sans-serif;
+font-family-heading: "DM Sans", sans-serif;
+font-family-monospace: "Fira Mono", monospace;
+font-family-logo: "DM Sans", sans-serif;
