--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,5 @@
 @import "{{ site.theme }}";
-.markdown-body {
+body {
   font-family-base: "DM Sans", sans-serif;
   font-family-heading: "DM Sans", sans-serif;
   font-family-monospace: "Fira Mono", monospace;
