--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,3 @@
 @import "{{ site.theme }}";
-body {
-  font-family-base: "DM Sans", sans-serif;
-  font-family-heading: "DM Sans", sans-serif;
-  font-family-monospace: "Fira Mono", monospace;
-  font-family-logo: "DM Sans", sans-serif;
-}
+$font-family-base: Helvetica, Arial, sans-serif, -apple-system;
+$font-family-heading: "Playfair Display", serif, -apple-system;
