--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,5 @@
+---
+---
 @import "{{ site.theme }}";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body {
