--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <img src="/anatarano.jpeg" />
+        <img src="/anatarano.jpg" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         <a href="https://github.com/anatarano" target="_blank" rel="external" style="padding-left:10px;">
