--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
         <a href="mailto:anatarano@gmail.com" target="_blank" rel="external" style="padding-left:10px;">
                   <i class="fa fa-envelope fa-2x" aria-hidden="true"></i> </a>
 
-        <p style="line-height:6px;"><a href="/index.md">ABOUT</a></p>
-        <p style="line-height:6px;"><a href="/index.md#what-have-i-been-up-to">UPDATES</a></p>
+        <p style="line-height:6px;"><a href="/index.html">ABOUT</a></p>
+        <p style="line-height:6px;"><a href="/index.html#what-have-i-been-up-to">UPDATES</a></p>
         
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
