--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <img src="/anatarano.jpg" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p>As an transdisciplinary data scientist, I advance rigorous and creative human-centered machine learning that addresses critical global issues, ranging from improving asteroid risk assessment to classifying coral reef habitats.</p>
+        <p>I advance rigorous and creative human-centered machine learning that addresses critical global issues.</p>
        
         <a href="https://github.com/anatarano" target="_blank" rel="external" style="padding-left:10px;">
               <i class="fa fa-github-square fa-2x" aria-hidden="true"></i> </a>
@@ -28,9 +28,11 @@
                   <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i> </a>
         <a href="mailto:anatarano@gmail.com" target="_blank" rel="external" style="padding-left:10px;">
                   <i class="fa fa-envelope fa-2x" aria-hidden="true"></i> </a>
-
-        <p style="line-height:6px;"><a href="/index.html">ABOUT</a></p>
-        <p style="line-height:6px;"><a href="/index.html#what-have-i-been-up-to">UPDATES</a></p>
+        <p></p>
+        <p></p>
+        
+        <p style="line-height:6px;"><a href="/index.html#about-me">ABOUT</a> | 
+          <a href="/index.html#what-have-i-been-up-to">UPDATES</a></p>
         
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
