--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,9 +7,12 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 body {
-    font-family: 'DM+Sans', sans-serif;
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Poppins', sans-serif;
-    font-weight: 700; // Assuming you've loaded the 700 weight
+    font-weight: 700; 
 }
