--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,9 @@
         <p></p>
         <p></p>
         
-        <p style="line-height:6px;"><a href="/index.html#about-me">ABOUT</a> | 
-          <a href="/index.html#what-have-i-been-up-to">UPDATES</a></p>
+        <p style="line-height:6px;"><a href="/index.html">HOME</a> | 
+          <a href="/index.html#-what-have-i-been-up-to">UPDATES</a> | 
+          <a href="/index.html#-previous-work">PREVIOUS WORK</a></p>
         
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
