--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <p></p>
         
         <p style="line-height:6px;"><a href="/index.html">HOME</a> | 
-          <a href="/index.html#-what-have-i-been-up-to">UPDATES</a> | 
+          <a href="/index.html#-recent-projects">UPDATES</a> | 
           <a href="/index.html#-previous-work">PREVIOUS WORK</a></p>
         
         {% if site.github.is_project_page %}
