--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
         <p></p>
         <p></p>
         
-        <p style="line-height:6px;"><a href="/index.html">HOME</a> | 
-          <a href="/index.html#-recent-projects">UPDATES</a> | 
+        <p style="line-height:6px;"><a href="/">HOME</a> | 
+          <a href="/index.html#-recent-projects">RECENT PROJECTS</a> | 
           <a href="/index.html#-previous-work">PREVIOUS WORK</a></p>
         
         {% if site.github.is_project_page %}
