--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <p></p>
         <p></p>
         
-        <p style="line-height:6px;"><a href="/">HOME</a> | 
+        <p><a href="/">HOME</a> | 
           <a href="/index.html#-recent-projects">RECENT PROJECTS</a> | 
           <a href="/index.html#-previous-work">PREVIOUS WORK</a></p>
         
