--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,7 @@
         <img src="/anatarano.jpg" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p>I advance rigorous and creative human-centered machine learning that addresses critical global issues. My work leverages remote sensing and geospatial machine learning, as well as culturally sensitive and diverse stakeholder engagement strategies, to augment the utility,
-precision, and value of data science for more ethical and equitable decision-making.</p>
+        <p>I advance geospatial machine learning to address critical global issues. My research practice is rooted in culture, emergent from a design thinking ethos, and devoted to social-ecological justice.</p>
        
         <a href="https://github.com/anatarano" target="_blank" rel="external" style="padding-left:10px;">
               <i class="fa fa-github-square fa-2x" aria-hidden="true"></i> </a>
