--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
         <img src="/anatarano.jpg" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p>I advance geospatial machine learning to address critical global issues. My research practice is rooted in culture, emergent from a design thinking ethos, and devoted to social-ecological justice.</p>
+        <p>I advance <b>geospatial machine learning</b> to address critical global issues.</p>
+        <p>My research practice is rooted in <b>culture</b>, devoted to social-ecological <b>justice</b>, and emergent from a <b>design thinking</b> ethos.</p>
        
         <a href="https://github.com/anatarano" target="_blank" rel="external" style="padding-left:10px;">
               <i class="fa fa-github-square fa-2x" aria-hidden="true"></i> </a>
