--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
         
         <p><a href="/">HOME</a> | 
           <a href="/index.html#-recent-projects">RECENT PROJECTS</a> | 
+          <a href="/index.html#-education">EDUCATION</a> | 
           <a href="/index.html#-previous-work">PREVIOUS WORK</a></p>
         
         {% if site.github.is_project_page %}
