--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,15 @@
         <p></p>
         
         <p><a href="/">HOME</a> | 
+          <a href="/index.html#-bio-sketch">BIO-SKETCH</a> | 
           <a href="/index.html#-recent-projects">RECENT PROJECTS</a> | 
           <a href="/index.html#-education">EDUCATION</a> | 
-          <a href="/index.html#-previous-work">PREVIOUS WORK</a></p>
+          <a href="/index.html#-previous-work">PREVIOUS WORK</a></p> | 
+          <a href="/index.html#-publications">PUBLICATIONS</a> |
+          <a href="/index.html#-recent-presentations">RECENT PRESENTATIONS</a> | 
+          <a href="/index.html#-awards">AWARDS</a> | 
+        
+        
         
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
