--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,10 +36,10 @@
           <a href="/index.html#-bio-sketch">BIO-SKETCH</a> | 
           <a href="/index.html#-recent-projects">RECENT PROJECTS</a> | 
           <a href="/index.html#-education">EDUCATION</a> | 
-          <a href="/index.html#-previous-work">PREVIOUS WORK</a></p> | 
+          <a href="/index.html#-previous-work">PREVIOUS WORK</a> | 
           <a href="/index.html#-publications">PUBLICATIONS</a> |
           <a href="/index.html#-recent-presentations">RECENT PRESENTATIONS</a> | 
-          <a href="/index.html#-awards">AWARDS</a> | 
+          <a href="/index.html#-awards">AWARDS</a></p>
         
         
         
