--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p>I advance geospatial machine learning to address critical global issues.</p>
-        <p>My research practice is rooted in culture, devoted to social-ecological justice, and emergent from a design thinking ethos.</p>
+        <p>My research practice is emergent from a design thinking ethos.</p>
        
         <a href="https://github.com/anatarano" target="_blank" rel="external" style="padding-left:10px;">
               <i class="fa fa-github-square fa-2x" aria-hidden="true"></i> </a>
